[project]
name = "crow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masataka Hisasue", email = "masataka.hisasue@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crow"]
