[project]
name = "crow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masataka Hisasue", email = "masataka.hisasue@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"crow" = "crow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crow"]
